  WeeChat home (default is "~/.weechat") (task #11266)
* core: add optional arguments for command /plugin load/reload/autoload
* core: fix compilation error with "pid_t" on Mac OS X (bug #34639)
* core: enable background process under Cygwin to connect to servers, fix
  reconnection problem (bug #34626)
* api: add new functions strcasecmp_range and strncasecmp_range
* irc: add case insensitive string comparison based on casemapping of server
  (rfc1459, strict-rfc1459, ascii) (bug #34239)
* irc: display channel voice notices received in channel buffer (bug #34762),
  display channel/op notices sent in channel buffer
* irc: add option irc.color.mirc_remap to remap mirc colors in messages to
  WeeChat colors
* irc: allow URL "irc://" in command /connect
* irc: auto-connect to servers created with "irc://" on command line but not
  other servers if "-a" ("--no-connect") is given
* guile: new script plugin for scheme (task #7289)
* ruby: fix crash when reloading ruby plugin (bug #34474)

Version 0.3.6 (2011-10-22)
--------------------------

* core: fix freeze when calling function util_file_get_content with a directory
  instead of a filename
* core: add color attribute "|" (keep attributes) and value "resetcolor" for
  function weechat_color in plugin API (used by irc plugin to keep
  bold/reverse/underlined in message when changing color) (bug #34550)
* core: fix compilation error (INSTALLPREFIX undeclared) on OS X and when
  compiling with included gettext (bug #26690)
* core: display timeout for hook_process command only if debug for core is
  enabled (task #11401)
* core: bufferize lines displayed before core buffer is created, to display them
  in buffer when it is created
* core: fix display of background color in chat area after line feed
* core: fix paste detection (problem with end of lines)
* core: add new option weechat.look.color_basic_force_bold, off by default: bold
  is used only if terminal has less than 16 colors (patch #7621)